# softspoken-wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  client.js  go.mod  index.d.ts  index.js  libOTe.patch  package-lock.json  package.json  server.go  server.js
go/: interface-wrapper.h  ot-wrapper.i
node/: async-ot-manager.cc  async-ot-manager.h  ot.cc
src/: logger.cpp  logger.h  optional.h  ot-manager.cpp  ot-manager.h
